--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
             <div
               class="text text-right text-blue-600 font-bold text-sm mr-10 my-1"
             >
-              Forget password?
+              <a href="#">Forget password?</a>
             </div>
             <button
               class="button bg-login w-full place-items-center rounded-sm p-2 font-bold"
