--- a/src/index.html
+++ b/src/index.html
@@ -66,13 +66,17 @@
           <div class="text p-3 cursor-pointer hover:text-button">Bookings</div>
           <div class="text p-3 cursor-pointer hover:text-button">Suppliers</div>
           <div class="text p-3 cursor-pointer hover:text-button">Community</div>
+        
         </div>
-        <div class="get-started">
+        <div class="flex">
+          <div id="counter" class="counter text-white font-bold bg-button rounded-sm px-3 py-1 mr-1">30</div>
+        <div class="  get-started">
           <button
             class="button text-white font-bold bg-button rounded-sm px-3 py-1 mr-11"
           >
             Get started
           </button>
+        </div>
         </div>
       </header>
       <section class="section relative">
@@ -146,5 +150,6 @@
         </div>
       </section>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
